// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag when is clickable should render with clickable styles 1`] = `
.circuit-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  font-size: 16px;
  line-height: 24px;
  box-shadow: 0px 0px 0px 1px #D8DDE1;
  padding: 4px 12px;
  cursor: default;
  cursor: pointer;
}

.circuit-0:hover {
  background-color: #D8DDE1;
  box-shadow: 0px 0px 0px 1px #D8DDE1;
}

<div
  class="circuit-0 circuit-1"
>
  SomeTest
</div>
`;

exports[`Tag when is default should render with default styles 1`] = `
.circuit-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  font-size: 16px;
  line-height: 24px;
  box-shadow: 0px 0px 0px 1px #D8DDE1;
  padding: 4px 12px;
  cursor: default;
}

<div
  class="circuit-0 circuit-1"
>
  SomeTest
</div>
`;

exports[`Tag when is selected should change the close icon color 1`] = `
.circuit-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  font-size: 16px;
  line-height: 24px;
  box-shadow: 0px 0px 0px 1px #D8DDE1;
  padding: 4px 12px;
  cursor: default;
  background-color: #3388FF;
  box-shadow: 0px 0px 0px 1px #3388FF;
  color: #FFFFFF;
}

.circuit-6 > svg {
  fill: #FFFFFF;
}

.circuit-4 {
  padding: 0;
  margin: 0;
  display: inline-block;
  background-color: transparent;
  border: none;
  cursor: pointer;
  fill: #0F131A;
  overflow: initial;
  height: 16px;
  width: 16px;
  margin-left: 4px;
}

.circuit-4:focus,
.circuit-4:active {
  outline: none;
}

.circuit-4 > svg {
  height: 100%;
  width: 100%;
}

.circuit-4 svg {
  fill: #FFFFFF;
}

.circuit-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<div
  class="circuit-6 circuit-7"
>
  SomeTest
  <button
    class="circuit-2 circuit-3 circuit-4 circuit-5"
    data-testid="tag-close"
    type="button"
  >
    <div
      role="presentation"
    >
      close-icon.svg
    </div>
    <span
      class="circuit-0 circuit-1"
    >
      remove
    </span>
  </button>
</div>
`;

exports[`Tag when is selected should change the given icon color 1`] = `
.circuit-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  font-size: 16px;
  line-height: 24px;
  box-shadow: 0px 0px 0px 1px #D8DDE1;
  padding: 4px 12px;
  cursor: default;
  background-color: #3388FF;
  box-shadow: 0px 0px 0px 1px #3388FF;
  color: #FFFFFF;
}

.circuit-2 > svg {
  fill: #FFFFFF;
}

.circuit-0 {
  margin-right: 4px;
  display: inline-block;
  width: 16px;
  height: 16px;
  vertical-align: middle;
}

.circuit-0 > svg {
  vertical-align: top;
}

.circuit-0 > svg {
  fill: #FFFFFF;
}

<div
  class="circuit-2 circuit-3"
>
  <span
    class="circuit-0 circuit-1"
  >
    <div>
      icon-tick.svg
    </div>
  </span>
  SomeTest
</div>
`;

exports[`Tag when is selected should render with selected styles 1`] = `
.circuit-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  font-size: 16px;
  line-height: 24px;
  box-shadow: 0px 0px 0px 1px #D8DDE1;
  padding: 4px 12px;
  cursor: default;
  background-color: #3388FF;
  box-shadow: 0px 0px 0px 1px #3388FF;
  color: #FFFFFF;
}

.circuit-0 > svg {
  fill: #FFFFFF;
}

<div
  class="circuit-0 circuit-1"
>
  SomeTest
</div>
`;
